freelingesnecdir = $(prefix)/share/matxin/matxin-spa/freeling/nec
freelingesnec_DATA = gazLOC-c.dat \
		     gazLOC-p.dat \
		     gazMISC-c.dat \
		     gazMISC-p.dat \
		     gazORG-c.dat \
		     gazORG-p.dat \
		     gazPER-c.dat \
		     gazPER-p.dat \
		     nec-ab.dat \
		     nec.abm \
		     nec.lex \
		     nec.rgf \
		     nec.svm \
		     nec-svm.dat \
		     twGENT.dat \
		     twLOC.dat \
		     twORG.dat \
		     twPER.dat
