freelingesnercdatadir = $(prefix)/share/matxin/matxin-spa/freeling/nerc/data

freelingesnercdata_DATA =  function.dat \
                           gazLOC-c.dat \
                           gazLOC-p.dat \
                           gazMISC-c.dat \
                           gazMISC-p.dat \
                           gazORG-c.dat \
                           gazORG-p.dat \
                           gazPER-c.dat \
                           gazPER-p.dat \
                           twGENT.dat \
                           twLOC.dat \
                           twMISC.dat \
                           twORG.dat \
                           twPER.dat

