freelingesnecdir = $(prefix)/share/matxin/matxin-spa/freeling/nerc/nec

freelingesnec_DATA =  nec-ab-poor1.dat \
                      nec-ab-rich.dat \
                      nec-f34.rgf \
                      nec-f34-poor1-5abs.abm \
                      nec-f34-poor1-5abs.lex \
                      nec-f34-rich-1abs.abm \
                      nec-f34-rich-1abs.lex

