freelingesnerdir = $(prefix)/share/matxin/matxin-spa/freeling/nerc/ner

freelingesner_DATA =  ner-ab-poor1.dat \
                      ner-ab-rich.dat \
                      ner-f86.rgf \
                      ner-f86-rich-5abs.abm \
                      ner-f86-rich-5abs.lex \
                      ner-f201.rgf \
                      ner-f201-poor1-3abs.abm \
                      ner-f201-poor1-3abs.lex

